# gaea

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  setup.sh
include/: gaea.h
src/: gaea.c  gaea_cli.c  main.c
tests/: CMakeLists.txt  test_gaea.c  test_gaea_types.c
